fix: make scrollbar thin at code blocks

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -18,6 +18,9 @@
   ul {
     @apply tw-list-disc tw-list-outside;
   }
+  .tw-scrollbar-thin {
+    scrollbar-width: thin;
+  }
   
   :root {
     /* ========== Global ========== */
